--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -15,7 +15,8 @@ resources:
   type: s3
   source:
     bucket: cf-cli-releases
-    regexp: releases/v(\d+.\d+.\d+)/cf-cli_*_linux_x86-64.tgz
+    regexp: releases/v(.*)/cf-cli_(.*)_linux_x86-64.tgz
+    region_name: us-west-1
 
 - name: candidate-release
   type: s3
@@ -24,6 +25,7 @@ resources:
     versioned_file: cf-cli-dev-release.tgz
     access_key_id: ((release-bucket-access-key-id))
     secret_access_key: ((release-bucket-secret-key))
+    region_name: us-west-1
 
 # - name: release-version
 #   type: semver
@@ -44,7 +46,7 @@ jobs:
         - get: cli-binary-linux-64
           trigger: true
       - task: bump-cli
-        file: tasks/bump-cli-release.yml
+        file: cf-cli-release/ci/tasks/bump-cli-release.yml
         input_mapping:
           cf-cli-release-input: cf-cli-release
         params:
