WIP add our own docker image
Signed-off-by: Sebastian Vidrio <svidrio@pivotal.io>

--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: cfcli/cli-base
+    repository: cfcli/cli-release-base
 
 inputs:
 - name: cf-cli-release
