WIP fix path to finalize-release.yml
Signed-off-by: Sebastian Vidrio <svidrio@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -121,7 +121,7 @@ jobs:
           params:
             bump: minor
       - task: finalize-release
-        file: tasks/finalize-release.yml
+        file: cf-cli-release/ci/tasks/finalize-release.yml
         params:
           ACCESS_KEY_ID: ((release-bucket-access-key-id))
           SECRET_KEY: ((release-bucket-secret-key))
